# hopper

./: .gitignore  .test.ipynb.icloud  CHANGELOG.md  LICENSE  LICENSE.txt  README.md  hi.txt  pyproject.toml  setup.py  test.ipynb  test.py
.github/workflows/: ci.yml
.ipynb_checkpoints/: .test-checkpoint.ipynb.icloud  test-checkpoint.ipynb
examples/: README.md  quickstart.py
hopper/: PKG-INFO  SOURCES.txt  __init__.py  explore.py  hoppers.py  requires.txt  top_level.txt
tests/: test_hopper.py
treehopper/: __init__.py  explore.py  hopper.py  hoppers.py  utils.py
